--- a/style.css
+++ b/style.css
@@ -716,8 +716,62 @@ button:hover {
 }
 
 @media (max-width: 480px) {
-    /* home  */
+    
+    .left-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .info-section h1{
+        font-size:1rem;
+    }
+    .info-section p{
+        font-size:1rem;
+        font-weight: bold;
+        color: #FFF;
+    }
+    .set-icons-background-color{
+       
+        height: 40px;
+        width: 40px; 
+        
+    }
+    .icons-color{
+        color: #FF8A00;
+        font-size: 1.2rem;
+        text-decoration: none;
+        margin: 0 10px;
+    }
+    
+    .cta-buttons a .resume-btn, 
+    .cta-buttons a .hire-btn {
+        margin-right: 5px;
+        padding: 10px 15px;
+        border: none;
+        cursor: pointer;
+        font-size: 14px;
+        border-radius: 5px;
+        font-weight: 600;
+        transition: all 0.5s ease;
+    }
+    .cta-buttons a .hire-btn{
+        color: #F01DD4;
+        background-color: #ffffff;
+        padding: 11px 17px;
+    }  
+    .cta-buttons a .resume-btn{
+        border: 3px solid #f1ece4;
+    }
+    .profile-background img{
+        height:260px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 1000;
+        box-shadow: 0px 0px 40px 5px #f1ece4;
+    }
 
+    /* skills  */
     .section-heading{
         font-size: 1rem;
     }
@@ -745,62 +799,6 @@ button:hover {
         transition-duration: 0.5s;
     }
 
-
-    .left-container{
-        display: flex;
-        flex-direction: column;
-    }
-    .info-section h1{
-        font-size:1rem;
-    }
-    .info-section p{
-        font-size:1rem;
-        font-weight: bold;
-        color: #FFF;
-    }
-
-    
-    .set-icons-background-color{
-       
-        height: 40px;
-        width: 40px; 
-        
-    }
-    .icons-color{
-        color: #FF8A00;
-        font-size: 1.2rem;
-        text-decoration: none;
-        margin: 0 10px;
-    }
-    
-    .cta-buttons a .resume-btn, 
-    .cta-buttons a .hire-btn {
-        margin-right: 5px;
-        padding: 10px 15px;
-        border: none;
-        cursor: pointer;
-        font-size: 14px;
-        border-radius: 5px;
-        font-weight: 500;
-        transition: all 0.5s ease;
-    }
-    .cta-buttons a .hire-btn{
-        color: #F01DD4;
-        background-color: #ffffff;
-        padding: 11px 17px;
-    }  
-    .cta-buttons a .resume-btn{
-        border: 3px solid #f1ece4;
-    }
-    .profile-background img{
-        height:170px;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        opacity: 1000;
-        box-shadow: 0px 0px 40px 5px #f1ece4;
-    }
     /* project */
     .projects .section-heading h1{
         font-size: 1.5rem;
